Fix contact overflow
Changes made:
 - Contact form is now properly hidden before expanding

--- a/src/styles/component/console-screen.scss
+++ b/src/styles/component/console-screen.scss
@@ -38,10 +38,14 @@
         }
     }
 
-    &__content {
-        padding: 4.8rem;
+    &__container {
         height: 100%;
         background: rgba(0, 0, 0, .25);
+        overflow-y: scroll;
+    }
+
+    &__content {
+        padding: 4.8rem;
     }
 
     .exit-button {
